# aoc2024

./: Cargo.toml  README.md
input/day1/: test.txt
input/day10/: test2.txt
input/day12/: test.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt
input/day13/: test.txt
input/day15/: test.txt  test2.txt  test4.txt
input/day3/: test.txt
input/day4/: test.txt  test2.txt
input/day5/: test.txt
input/day6/: test.txt
input/day8/: test.txt
input/day9/: test2.txt  test3.txt
